Fix various doxygen warnings