@@ -335,7 +335,7 @@ public class InfoNodeLookAndFeel extends MetalLookAndFeel {
     };
 
     Object[] defaults = {
-      "SplitPane.dividerSize", new Integer(theme.getSplitPaneDividerSize()),
+      "SplitPane.dividerSize", Integer.valueOf(theme.getSplitPaneDividerSize()),
 //      "SplitPaneDivider.border", new BorderUIResource(splitPaneDividerBorder),
 //      "SplitPane.border", new BorderUIResource(splitPaneBorder),
 
@@ -362,7 +362,7 @@ public class InfoNodeLookAndFeel extends MetalLookAndFeel {
 
       "ScrollBar.background", theme.getScrollBarBackgroundColor(),
       "ScrollBar.shadow", theme.getScrollBarBackgroundShadowColor(),
-      "ScrollBar.width", new Integer(theme.getScrollBarWidth()),
+      "ScrollBar.width", Integer.valueOf(theme.getScrollBarWidth()),
 //    "ScrollBar.border", new BorderUIResource(new LineBorder(Color.GRAY, 1)),
 
 //    "ScrollBar.thumb", new RelativeColor(thumbColor, 0.8).getColor(),
@@ -410,7 +410,7 @@ public class InfoNodeLookAndFeel extends MetalLookAndFeel {
 
 //      "Button.border", new BorderUIResource(buttonBorder),
 //      "Button.disabledShadow", new ColorUIResource(Color.GREEN), //ColorUtil.blend(textColor, controlColor, 0.5f)),
-      "Button.textShiftOffset", new Integer(2),
+      "Button.textShiftOffset", Integer.valueOf(2),
       "Button.select", theme.getControlLightShadowColor(),
 //    "Button.focus", focusColor,
       "Button.margin", theme.getButtonMargin(),
@@ -419,7 +419,7 @@ public class InfoNodeLookAndFeel extends MetalLookAndFeel {
 
       "ToggleButton.margin", theme.getButtonMargin(),
       "ToggleButton.select", theme.getControlLightShadowColor(),
-      "ToggleButton.textShiftOffset", new Integer(2),
+      "ToggleButton.textShiftOffset", Integer.valueOf(2),
 
       "Tree.openIcon", theme.getTreeOpenIcon(),
       "Tree.closedIcon", theme.getTreeClosedIcon(),
@@ -428,8 +428,8 @@ public class InfoNodeLookAndFeel extends MetalLookAndFeel {
           new TreeIcon(TreeIcon.PLUS, 10, 10, true, theme.getTextColor(), theme.getTreeIconBackgroundColor())),
       "Tree.expandedIcon", new IconUIResource(
           new TreeIcon(TreeIcon.MINUS, 10, 10, true, theme.getTextColor(), theme.getTreeIconBackgroundColor())),
-      "Tree.leftChildIndent", new Integer(5),
-      "Tree.rightChildIndent", new Integer(11),
+      "Tree.leftChildIndent", Integer.valueOf(5),
+      "Tree.rightChildIndent", Integer.valueOf(11),
 //    "Tree.rowHeight", new Integer(12),
 
       "OptionPane.errorIcon", LookAndFeel.makeIcon(iconClass, "icons/Error.gif"),
